enforcers/kube_enforcer/kubernetes_and_openshift/manifests/kube_enforcer_advanced/001_kube_enforcer_config.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ke-envoy-conf
  namespace: khulnasoft
data:
  # Enable the below Env for mTLS between kube-enforcer and gateway
  # KHULNASOFT_PUBLIC_KEY: "/opt/khulnasoft/ssl/khulnasoft_kube-enforcer.crt"
  # KHULNASOFT_PRIVATE_KEY: "/opt/khulnasoft/ssl/khulnasoft_kube-enforcer.key"
  # KHULNASOFT_ROOT_CA: "/opt/khulnasoft/ssl/rootCA.crt"
  envoy.yaml: |
    node:
      cluster: k8s
      id: <INSERT NODE ID>

    dynamic_resources:
      cds_config:
        path: /etc/khulnasoft/envoy/cds.yaml
        initial_fetch_timeout: 0s
      lds_config:
        path: /etc/envoy/lds.yaml
  lds.yaml: |
    resources:
      - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
        name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stream_idle_timeout: 0s
                  drain_timeout: 20s
                  access_log:
                    - name: envoy.access_loggers.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: "/dev/stdout"
                  codec_type: AUTO
                  stat_prefix: ingress_https
                  route_config:
                    name: local_route
                    virtual_hosts:
                      - name: https
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/agent_grpc_channel.GWChannelV2/PushNotificationHandler"
                              grpc: { }
                            route:
                              cluster: khulnasoft-kube-enforcer
                              timeout: 0s
                          - match:
                              prefix: "/"
                              grpc: { }
                            route:
                              cluster: khulnasoft-gateway
                              timeout: 0s
                          - match:
                              prefix: "/"
                            route:
                              cluster: khulnasoft-kube-enforcer-k8s
                              timeout: 0s

                  http_filters:
                    - name: envoy.filters.http.health_check
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.filter.http.health_check.v2.HealthCheck
                        pass_through_mode: false
                        headers:
                          - name: ":path"
                            exact_match: "/healthz"
                          - name: "x-envoy-livenessprobe"
                            exact_match: "healthz"
                    - name: envoy.filters.http.router
                      typed_config: { }
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  alpn_protocols: "h2,http/1.1"
                  tls_certificates:
                    - certificate_chain:
                        filename: "/etc/ssl/envoy/server.crt"
                      private_key:
                        filename: "/etc/ssl/envoy/server.key"
  cds.yaml: |
    resources:
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: khulnasoft-kube-enforcer
      connect_timeout: 180s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options:
        hpack_table_size: 4294967
        max_concurrent_streams: 2147483647
      circuit_breakers:
        thresholds:
          max_pending_requests: 2147483647
          max_requests: 2147483647
      load_assignment:
        cluster_name: khulnasoft-kube-enforcer
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: localhost
                    port_value: 8442
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: khulnasoft-kube-enforcer
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: khulnasoft-kube-enforcer-k8s
      connect_timeout: 180s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          max_pending_requests: 2147483647
          max_requests: 2147483647
      load_assignment:
        cluster_name: khulnasoft-kube-enforcer-k8s
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: localhost
                    port_value: 8449
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: khulnasoft-kube-enforcer-k8s
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: khulnasoft-gateway
      connect_timeout: 180s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options:
        hpack_table_size: 4294967
        max_concurrent_streams: 2147483647
      circuit_breakers:
        thresholds:
          max_pending_requests: 2147483647
          max_requests: 2147483647
      load_assignment:
        cluster_name: khulnasoft-gateway
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: khulnasoft-gateway.khulnasoft
                    port_value: 8443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: khulnasoft-gateway
  validation_context_sds_secret.yaml: |
    resources:
      - "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret"
        name: "validation_context_sds"
        validation_context:
          trusted_ca:
            filename: /etc/khulnasoft/envoy/ca-certificates.crt
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kube-enforcer-admission-hook-config
  namespace: khulnasoft
webhooks:
  - name: imageassurance.khulnasoft.com
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources:
          - pods
          - deployments
          - replicasets
          - replicationcontrollers
          - statefulsets
          - daemonsets
          - jobs
          - cronjobs
          - configmaps
          - services
          - roles
          - rolebindings
          - clusterroles
          - clusterrolebindings
          - customresourcedefinitions
    clientConfig:
      # Please follow instruction in document to generate new CA cert
      caBundle:
      service:
        namespace: khulnasoft
        name: khulnasoft-kube-enforcer
    timeoutSeconds: 2
    failurePolicy: Ignore
    admissionReviewVersions: ["v1beta1"]
    sideEffects: "None"
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-enforcer-me-injection-hook-config
  namespace: khulnasoft
webhooks:
  - name: microenforcer.khulnasoft.com
    clientConfig:
      service:
        name: khulnasoft-kube-enforcer
        namespace: khulnasoft
        path: "/mutate"
      caBundle:
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    timeoutSeconds: 2
    failurePolicy: Ignore
    admissionReviewVersions: ["v1beta1"]
    sideEffects: "None"
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: khulnasoft-kube-enforcer-sa
  namespace: khulnasoft
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: khulnasoft-kube-enforcer
rules:
  - apiGroups: ["*"]
    resources: ["pods", "nodes", "namespaces", "deployments", "jobs", "cronjobs", "daemonsets", "replicasets", "replicationcontrollers", "statefulsets", "clusterroles", "clusterrolebindings", "componentstatuses", "services" ]
    verbs: ["get", "list", "watch"]
  - apiGroups:
      - apps.openshift.io
    resources:
      - deploymentconfigs
    verbs:
      - get
      - list
      - watch
  - apiGroups: ["khulnasoft.github.io"]
    resources: ["configauditreports", "clusterconfigauditreports"]
    verbs: ["get", "list", "watch"]
  #### Can be removed if your platform isn't Openshift
  - apiGroups: [ "operator.openshift.io" ]
    resources: [ "imagecontentsourcepolicies" ]
    verbs: [ "get", "list", "watch" ]
    ####
  - apiGroups: ["*"]
    resources: ["configmaps"]
    verbs: ["get", "list", "watch"]
  - apiGroups:
      - "*"
    resources:
      - roles
      - rolebindings
      - clusterroles
      - clusterrolebindings
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "*"
    resources:
      - customresourcedefinitions
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - "*"
    resources:
      - secrets
    verbs:
      - get
      - list
      - watch
      # Comment the below 3 verbs if Pod-Enforcer injection is not going to be used
      - create 
      - update
      - delete
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: khulnasoft-kube-enforcer
  namespace: khulnasoft
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: khulnasoft-kube-enforcer
subjects:
  - kind: ServiceAccount
    name: khulnasoft-kube-enforcer-sa
    namespace: khulnasoft
---
# This role specific to kube-bench scans permissions
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: khulnasoft-kube-enforcer
  namespace: khulnasoft
rules:
  - apiGroups: ["*"]
    resources: ["pods/log"]
    verbs: ["get", "list", "watch"]
  - apiGroups: ["*"]
    resources: ["jobs"]
    verbs: ["create", "delete"]
  - apiGroups: ["*"]
    resources: ["pods"]
    verbs: ["create", "delete"]
  - apiGroups: ["*"]
    resources: ["leases"]
    verbs: ["get", "list", "create", "update"]
  - apiGroups: [ "*" ]
    resources: [ "secrets" ]
    verbs: ["create", "delete"]
  - apiGroups: [ "*" ]
    resources: [ "configmaps" ]
    verbs: ["update", "create"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: khulnasoft-kube-enforcer
  namespace: khulnasoft
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: khulnasoft-kube-enforcer
subjects:
- kind: ServiceAccount
  name: khulnasoft-kube-enforcer-sa
  namespace: khulnasoft
---
# Starboard resource yamls################
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: configauditreports.khulnasoft.github.io
  labels:
    app.kubernetes.io/managed-by: starboard
    app.kubernetes.io/version: "0.15.15"
spec:
  group: khulnasoft.github.io
  versions:
    - name: v1alpha1
      served: true
      storage: true
      additionalPrinterColumns:
        - jsonPath: .report.scanner.name
          type: string
          name: Scanner
          description: The name of the config audit scanner
        - jsonPath: .metadata.creationTimestamp
          type: date
          name: Age
          description: The age of the report
        - jsonPath: .report.summary.criticalCount
          type: integer
          name: Critial
          priority: 1
          description: The number of failed checks with critial severity
        - jsonPath: .report.summary.highCount
          type: integer
          name: High
          priority: 1
          description: The number of failed checks with high severity
        - jsonPath: .report.summary.mediumCount
          type: integer
          name: Medium
          priority: 1
          description: The number of failed checks with medium severity
        - jsonPath: .report.summary.lowCount
          type: integer
          name: Low
          priority: 1
          description: The number of failed checks with low severity
      schema:
        openAPIV3Schema:
          x-kubernetes-preserve-unknown-fields: true
          type: object
  scope: Namespaced
  names:
    singular: configauditreport
    plural: configauditreports
    kind: ConfigAuditReport
    listKind: ConfigAuditReportList
    categories: []
    shortNames:
      - configaudit
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: clusterconfigauditreports.khulnasoft.github.io
  labels:
    app.kubernetes.io/managed-by: starboard
spec:
  group: khulnasoft.github.io
  versions:
    - name: v1alpha1
      served: true
      storage: true
      additionalPrinterColumns:
        - jsonPath: .report.scanner.name
          type: string
          name: Scanner
          description: The name of the config audit scanner
        - jsonPath: .metadata.creationTimestamp
          type: date
          name: Age
          description: The age of the report
        - jsonPath: .report.summary.dangerCount
          type: integer
          name: Danger
          priority: 1
          description: The number of checks that failed with Danger status
        - jsonPath: .report.summary.warningCount
          type: integer
          name: Warning
          priority: 1
          description: The number of checks that failed with Warning status
        - jsonPath: .report.summary.passCount
          type: integer
          name: Pass
          priority: 1
          description: The number of checks that passed
      schema:
        openAPIV3Schema:
          x-kubernetes-preserve-unknown-fields: true
          type: object
  scope: Cluster
  names:
    singular: clusterconfigauditreport
    plural: clusterconfigauditreports
    kind: ClusterConfigAuditReport
    listKind: ClusterConfigAuditReportList
    categories: []
    shortNames:
      - clusterconfigaudit
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: starboard-operator
  namespace: khulnasoft
imagePullSecrets:
  - name: khulnasoft-registry
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: starboard
  namespace: khulnasoft
data:
  configAuditReports.scanner: Conftest
---
apiVersion: v1
kind: Secret
metadata:
  name: starboard
  namespace: khulnasoft
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: starboard-policies-config
  namespace: khulnasoft
  labels:
    app.kubernetes.io/name: starboard-operator
    app.kubernetes.io/instance: starboard-operator
    app.kubernetes.io/version: "0.15.15"
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: starboard-operator  
rules:
  - apiGroups:
      - ""
    resources:
      - pods
      - pods/log
      - replicationcontrollers
      - resourcequotas
      - limitranges
      - services
      - configmaps
      - serviceaccounts
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ""
    resources:
      - nodes
    verbs:
      - get
      - list
      - watch  
  - apiGroups:
      - apps
    resources:
      - replicasets
      - statefulsets
      - daemonsets
      - deployments
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - apps.openshift.io
    resources:
      - deploymentconfigs
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - batch
    resources:
      - jobs
      - cronjobs
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - rbac.authorization.k8s.io
    resources:
      - roles
      - rolebindings
      - clusterroles
      - clusterrolebindings
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - apiextensions.k8s.io
    resources:
      - customresourcedefinitions
    verbs:
      - get
      - list
      - watch  
  - apiGroups:
      - networking.k8s.io
      - extensions
    resources:
      - networkpolicies
      - ingresses
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - policy
    resources:
      - podsecuritypolicies
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - khulnasoft.github.io
    resources:
      - vulnerabilityreports
      - configauditreports
      - clusterconfigauditreports
      - ciskubebenchreports
    verbs:
      - get
      - list
      - watch
      - create
      - update
      - delete
  - apiGroups:
      - coordination.k8s.io
    resources:
      - leases
    verbs:
      - create
      - get
      - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: starboard-operator
  namespace: khulnasoft
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: starboard-operator
subjects:
  - kind: ServiceAccount
    name: starboard-operator
    namespace: khulnasoft
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: starboard-operator
  namespace: khulnasoft
rules:
  - apiGroups:
      - "" 
    resources:
      - secrets
    verbs:
      - get
      - create
      - update      
  - apiGroups:
      - ""
    resources:
      - configmaps      
      - serviceaccounts      
    verbs:      
      - create
      - update
  - apiGroups:
      - ""
    resources:
      - events
    verbs:
      - create
  - apiGroups:
      - batch
    resources:
      - jobs
    verbs:
      - create
      - delete    

---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: starboard-operator
  namespace: khulnasoft
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: starboard-operator
subjects:
- kind: ServiceAccount
  name: starboard-operator
  namespace: khulnasoft
